# ZLUDA

./: .cursorignore  .gitmodules  Cargo.toml  fix_nv.sh  fix_spirv.sh  kernel.ptx
comgr/: Cargo.toml
comgr/src/: lib.rs
cuda_types/: Cargo.toml
cuda_types/src/: cuda.rs
examples/: tenstorrent_example.rs
ext/amd_comgr-sys/: Cargo.toml
ext/gemmini_comgr-sys/: Cargo.toml  build.rs
ext/gemmini_comgr-sys/src/: command_wrapper.rs  lib.rs
ext/gemmini_runtime-sys/: Cargo.toml  build.rs
ext/gemmini_runtime-sys/lib/: libgemmini.def
ext/gemmini_runtime-sys/src/: lib.rs
ext/hip_runtime-sys/: Cargo.toml
ext/hip_runtime-sys/lib/: amdhip64_6.def
ext/hip_runtime-sys/src/: lib.rs
ext/intel_comgr-sys/: Cargo.toml  README  build.rs
ext/intel_comgr-sys/examples/: simple_compile.rs
ext/intel_comgr-sys/src/: command_wrapper.rs  intel_comgr.rs  lib.rs
ext/tenstorrent_comgr-sys/: Cargo.toml  README.md
ext/tenstorrent_comgr-sys/src/: command_wrapper.rs
ext/tt_comgr-sys/: Cargo.toml  test_example.mlir
ext/tt_comgr-sys/src/: command_wrapper.rs
ext/tt_runtime-sys/: Cargo.toml  build.rs
ext/tt_runtime-sys/lib/: libtt_metal_c_wrapper.c
ext/tt_runtime-sys/src/: lib.rs  tt_metal_wrapper.cpp  tt_metal_wrapper.h
ext/ze_runtime-sys/: Cargo.toml  README.md  build.rs
ext/ze_runtime-sys/lib/: libze_loader.dis  libze_loader.so.1
ext/ze_runtime-sys/src/: lib.rs  runner.rs
ext/ze_runtime-sys/src/level-zero/: ze_api.h
ext/ze_runtime-sys/src/runner/: ze_runner.c  ze_runner.h
llvm_zluda/: Cargo.toml  build.rs
llvm_zluda/src/: lib.cpp  lib.rs
ptx/: Cargo.toml
ptx/examples/: checkpoint_demo.rs  emit_mlir_example.rs
ptx/lib/: zluda_ptx_tt_impl.cpp  zluda_ptx_ze_impl.bc  zluda_ptx_ze_impl.cpp
ptx/src/: checkpoint.rs  checkpoint_integration.rs  debug.rs  dwarf_validation.rs  lib.rs  state_recovery.rs
ptx/src/pass/: debug_integration.rs  emit_linalg_mlir.rs  emit_llvm.rs  emit_tosa_mlir.rs  emit_ttir_mlir.rs  insert_explicit_load_store.rs  llvm_helpers.rs  mlir_debug_framework.rs  mlir_debug_info_pass.rs  mlir_debugger_integration.rs  mod.rs
ptx/src/test/: mod.rs
ptx/src/test/spirv_run/: mod.rs
ptx_debug_tool/: Cargo.toml  README.md
ptx_debug_tool/examples/: demo_usage.sh  test_kernel.ptx
ptx_debug_tool/src/: main.rs
ptx_parser/src/: ast.rs  lib.rs
src/pass/: emit_llvm.rs  llvm_helpers.rs
zluda/: Cargo.toml
zluda/src/: lib.rs
zluda/src/impl/: context.rs  device.rs  driver.rs  export_table.rs  function.rs  memory.rs  mod.rs  module.rs  pointer.rs  ze_device.rs  ze_module.rs
zluda_bindgen/: Cargo.toml
zluda_bindgen/src/: main.rs
zluda_dump/src/: format.rs  format_generated.rs
zluda_inject/tests/: inject.rs
zluda_ml/: Cargo.toml
