[workspace]

resolver = "2"

members = [
    "ext/opencl-sys",
    "comgr",
    "cuda_base",
    "cuda_types",
    "detours-sys",
    "zluda",
    "zluda_dump",
    "zluda_inject",
    "zluda_redirect",
    "zluda_ml",
    "ptx",
    "ptx_parser",
    "ptx_parser_macros",
    "ptx_parser_macros_impl",
    "zluda_bindgen", "ext/intel_comgr-sys",
]

default-members = ["zluda", "zluda_ml", "zluda_inject", "zluda_redirect"]
