[workspace]

resolver = "2"

members = [
    "comgr",
    "cuda_base",
    "cuda_types",
    "detours-sys",
    "zluda",
    "zluda_dump",
    "zluda_inject",
    "zluda_redirect",
    "zluda_ml",
    "ptx",
    "ptx_parser",
    "ptx_parser_macros",
    "ptx_parser_macros_impl",
    "zluda_bindgen",
    "ext/amd_comgr-sys",
    "ext/intel_comgr-sys",
    "ext/ze_runtime-sys",
    "ext/hip_runtime-sys",
]

default-members = ["zluda", "zluda_ml", "zluda_inject", "zluda_redirect"]
