[package]
name = "cuda_types"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2018"

[dependencies]
cuda_base = { path = "../cuda_base" }
hip_runtime-sys = { path = "../ext/hip_runtime-sys" , optional = true }
ze_runtime-sys = { path = "../ext/ze_runtime-sys" , optional = true }

[features]
intel = ["ze_runtime-sys"]
amd = ["hip_runtime-sys"]
