[package]
name = "cuda_types"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2018"

[features]
default = ["intel"]
intel = []
amd = []

[dependencies]
cuda_base = { path = "../cuda_base" }
hip_runtime_sys = { path = "../ext/hip_runtime-sys" }
ze_runtime_sys = { path = "../ext/ze_runtime-sys" }
