[package]
name = "ptx"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[lib]

[dependencies]
ptx_parser = { path = "../ptx_parser" }
llvm_zluda = { path = "../llvm_zluda" }
quick-error = "1.2"
thiserror = "1.0"
bit-vec = "0.6"
half ="1.6"
bitflags = "1.2"
rustc-hash = "2.0.0"
strum = "0.26"
strum_macros = "0.26"
hip_runtime_sys = { path = "../ext/hip_runtime-sys" , optional = true }
ze_runtime_sys = { path = "../ext/ze_runtime-sys" , optional = true }
tempfile = "3"
which = "4.4"

[dev-dependencies]
comgr = { path = "../comgr" }
tempfile = "3"
paste = "1.0"
cuda-driver-sys = "0.3.0"


[features]
intel = ["ze_runtime_sys"]
amd = ["hip_runtime_sys"]
