[package]
name = "ptx"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[lib]

[dependencies]
ptx_parser = { path = "../ptx_parser" }
llvm_zluda = { path = "../llvm_zluda" }
quick-error = "1.2"
thiserror = "1.0"
bit-vec = "0.6"
half ="1.6"
bitflags = "1.2"
rustc-hash = "2.0.0"
strum = "0.26"
strum_macros = "0.26"
hip_runtime_sys = { path = "../ext/hip_runtime-sys" }
ze_runtime_sys = { path = "../ext/ze_runtime-sys" }
tt_runtime_sys = { path = "../ext/tt_runtime-sys" }
gemmini_runtime_sys = { path = "../ext/gemmini_runtime-sys" }
tempfile = "3"
which = "4.4"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ouroboros = "0.18"
regex = "1.0"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]
comgr = { path = "../comgr", default-features = false }
tempfile = "3"
paste = "1.0"
cuda-driver-sys = "0.3.0"


[[example]]
name = "emit_mlir_example"
path = "examples/emit_mlir_example.rs"

[[example]]
name = "checkpoint_demo"
path = "examples/checkpoint_demo.rs"

[features]
intel = ["comgr/intel"]
amd = ["comgr/amd"]
tenstorrent = ["comgr/tenstorrent"]
gemmini = ["comgr/gemmini"]
