[package]
name = "zluda"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[lib]
name = "nvcuda"
crate-type = ["cdylib"]

[features]
default = ["intel"]
intel = []
amd = []
tenstorrent = []

[dependencies]
comgr = { path = "../comgr" }
ptx_parser = { path = "../ptx_parser" }
ptx = { path = "../ptx" }
cuda_types = { path = "../cuda_types" }
cuda_base = { path = "../cuda_base" }
lazy_static = "1.4"
num_enum = "0.4"
lz4-sys = "1.9"
tempfile = "3"
paste = "1.0"
rustc-hash = "1.1"
ze_runtime_sys = { path = "../ext/ze_runtime-sys" }
hip_runtime_sys = { path = "../ext/hip_runtime-sys" }
tt_runtime_sys = { path = "../ext/tt_runtime-sys" }
tt_comgr_sys = { path = "../ext/tt_comgr-sys" }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["heapapi", "std"] }
