[package]
name = "zluda_ml"
version = "0.0.0"
authors = ["Andrzej Janik <vosen@vosen.pl>"]
edition = "2021"

[lib]
name = "nvml"
crate-type = ["cdylib"]

[dependencies]
cuda_base = { path = "../cuda_base" }
cuda_types = { path = "../cuda_types" }
ze_runtime_sys = { path = "../ext/ze_runtime-sys" }

[features]
default = ["intel"]
intel = []
amd = []
tenstorrent = []
