[package]
name = "gemmini_comgr_sys"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for Gemmini Compiler (COMGR) using Buddy Compiler"
license = "MIT"
authors = ["ZLUDA Team"]
readme = "README.md"

[dependencies]
tempfile = "3.4.0"
lazy_static = "1.4.0"
regex = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
which = "4.4.0"

[lib]
name = "gemmini_comgr_sys"
path = "src/lib.rs"

[[bin]]
name = "test_ttmlir"
path = "src/bin/test_ttmlir.rs"